--- a/package.json
+++ b/package.json
@@ -110,13 +110,16 @@
     "supervisor": "^0.12.0",
     "talib": "^1.0.4",
     "timebucket": "^0.4.0",
+    "toa-net": "^1.5.4",
     "trend": "0.3.0",
     "tulind": "^0.8.10",
     "url-loader": "^1.0.1",
     "uuid": "^3.1.0",
+    "vue-loader": "^15.2.1",
     "waypoints": "^4.0.1",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
+    "webpack-node-externals": "^1.7.2",
     "wexnz": "^0.1.3",
     "ws": "^5.1.1",
     "zero-fill": "^2.2.3"
