--- a/url-config.json
+++ b/url-config.json
@@ -1,4 +1,4 @@
 {
-    "URL_SERVER": "tcp://54.152.175.163:8000",
-    "URL_BOT_SERVER": "localhost"
+    "URL_SERVER": "tcp://54.152.175.163:8000", 
+    "URL_BOT_SERVER": "18.184.70.181"    
 }
